@@ -1,181 +1,0 @@
-@comment $NetBSD: PLIST,v 1.4 2018/10/07 08:51:42 adam Exp $
-bin/fitscheck-${PYVERSSUFFIX}
-bin/fitsdiff-${PYVERSSUFFIX}
-bin/fitshead-${PYVERSSUFFIX}
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/pyfits/__init__.py
-${PYSITELIB}/pyfits/__init__.pyc
-${PYSITELIB}/pyfits/__init__.pyo
-${PYSITELIB}/pyfits/_compat/__init__.py
-${PYSITELIB}/pyfits/_compat/__init__.pyc
-${PYSITELIB}/pyfits/_compat/__init__.pyo
-${PLIST.py2x}${PYSITELIB}/pyfits/_compat/_odict_py2/__init__.py
-${PLIST.py2x}${PYSITELIB}/pyfits/_compat/_odict_py2/__init__.pyc
-${PLIST.py2x}${PYSITELIB}/pyfits/_compat/_odict_py2/__init__.pyo
-${PLIST.py2x}${PYSITELIB}/pyfits/_compat/_weakset_py2/__init__.py
-${PLIST.py2x}${PYSITELIB}/pyfits/_compat/_weakset_py2/__init__.pyc
-${PLIST.py2x}${PYSITELIB}/pyfits/_compat/_weakset_py2/__init__.pyo
-${PYSITELIB}/pyfits/_compat/odict.py
-${PYSITELIB}/pyfits/_compat/odict.pyc
-${PYSITELIB}/pyfits/_compat/odict.pyo
-${PYSITELIB}/pyfits/_compat/weakref.py
-${PYSITELIB}/pyfits/_compat/weakref.pyc
-${PYSITELIB}/pyfits/_compat/weakref.pyo
-${PYSITELIB}/pyfits/_numpy_hacks.py
-${PYSITELIB}/pyfits/_numpy_hacks.pyc
-${PYSITELIB}/pyfits/_numpy_hacks.pyo
-${PYSITELIB}/pyfits/_release.py
-${PYSITELIB}/pyfits/_release.pyc
-${PYSITELIB}/pyfits/_release.pyo
-${PYSITELIB}/pyfits/card.py
-${PYSITELIB}/pyfits/card.pyc
-${PYSITELIB}/pyfits/card.pyo
-${PYSITELIB}/pyfits/column.py
-${PYSITELIB}/pyfits/column.pyc
-${PYSITELIB}/pyfits/column.pyo
-${PYSITELIB}/pyfits/compression.so
-${PYSITELIB}/pyfits/convenience.py
-${PYSITELIB}/pyfits/convenience.pyc
-${PYSITELIB}/pyfits/convenience.pyo
-${PYSITELIB}/pyfits/core.py
-${PYSITELIB}/pyfits/core.pyc
-${PYSITELIB}/pyfits/core.pyo
-${PYSITELIB}/pyfits/diff.py
-${PYSITELIB}/pyfits/diff.pyc
-${PYSITELIB}/pyfits/diff.pyo
-${PYSITELIB}/pyfits/extern/__init__.py
-${PYSITELIB}/pyfits/extern/__init__.pyc
-${PYSITELIB}/pyfits/extern/__init__.pyo
-${PYSITELIB}/pyfits/extern/six.py
-${PYSITELIB}/pyfits/extern/six.pyc
-${PYSITELIB}/pyfits/extern/six.pyo
-${PYSITELIB}/pyfits/file.py
-${PYSITELIB}/pyfits/file.pyc
-${PYSITELIB}/pyfits/file.pyo
-${PYSITELIB}/pyfits/fitsrec.py
-${PYSITELIB}/pyfits/fitsrec.pyc
-${PYSITELIB}/pyfits/fitsrec.pyo
-${PYSITELIB}/pyfits/hdu/__init__.py
-${PYSITELIB}/pyfits/hdu/__init__.pyc
-${PYSITELIB}/pyfits/hdu/__init__.pyo
-${PYSITELIB}/pyfits/hdu/base.py
-${PYSITELIB}/pyfits/hdu/base.pyc
-${PYSITELIB}/pyfits/hdu/base.pyo
-${PYSITELIB}/pyfits/hdu/compressed.py
-${PYSITELIB}/pyfits/hdu/compressed.pyc
-${PYSITELIB}/pyfits/hdu/compressed.pyo
-${PYSITELIB}/pyfits/hdu/groups.py
-${PYSITELIB}/pyfits/hdu/groups.pyc
-${PYSITELIB}/pyfits/hdu/groups.pyo
-${PYSITELIB}/pyfits/hdu/hdulist.py
-${PYSITELIB}/pyfits/hdu/hdulist.pyc
-${PYSITELIB}/pyfits/hdu/hdulist.pyo
-${PYSITELIB}/pyfits/hdu/image.py
-${PYSITELIB}/pyfits/hdu/image.pyc
-${PYSITELIB}/pyfits/hdu/image.pyo
-${PYSITELIB}/pyfits/hdu/nonstandard.py
-${PYSITELIB}/pyfits/hdu/nonstandard.pyc
-${PYSITELIB}/pyfits/hdu/nonstandard.pyo
-${PYSITELIB}/pyfits/hdu/streaming.py
-${PYSITELIB}/pyfits/hdu/streaming.pyc
-${PYSITELIB}/pyfits/hdu/streaming.pyo
-${PYSITELIB}/pyfits/hdu/table.py
-${PYSITELIB}/pyfits/hdu/table.pyc
-${PYSITELIB}/pyfits/hdu/table.pyo
-${PYSITELIB}/pyfits/header.py
-${PYSITELIB}/pyfits/header.pyc
-${PYSITELIB}/pyfits/header.pyo
-${PYSITELIB}/pyfits/py3compat.py
-${PYSITELIB}/pyfits/py3compat.pyc
-${PYSITELIB}/pyfits/py3compat.pyo
-${PYSITELIB}/pyfits/scripts/__init__.py
-${PYSITELIB}/pyfits/scripts/__init__.pyc
-${PYSITELIB}/pyfits/scripts/__init__.pyo
-${PYSITELIB}/pyfits/scripts/fitscheck.py
-${PYSITELIB}/pyfits/scripts/fitscheck.pyc
-${PYSITELIB}/pyfits/scripts/fitscheck.pyo
-${PYSITELIB}/pyfits/scripts/fitsdiff.py
-${PYSITELIB}/pyfits/scripts/fitsdiff.pyc
-${PYSITELIB}/pyfits/scripts/fitsdiff.pyo
-${PYSITELIB}/pyfits/scripts/fitsheader.py
-${PYSITELIB}/pyfits/scripts/fitsheader.pyc
-${PYSITELIB}/pyfits/scripts/fitsheader.pyo
-${PYSITELIB}/pyfits/scripts/fitsinfo.py
-${PYSITELIB}/pyfits/scripts/fitsinfo.pyc
-${PYSITELIB}/pyfits/scripts/fitsinfo.pyo
-${PYSITELIB}/pyfits/tests/__init__.py
-${PYSITELIB}/pyfits/tests/__init__.pyc
-${PYSITELIB}/pyfits/tests/__init__.pyo
-${PYSITELIB}/pyfits/tests/data/arange.fits
-${PYSITELIB}/pyfits/tests/data/ascii.fits
-${PYSITELIB}/pyfits/tests/data/blank.fits
-${PYSITELIB}/pyfits/tests/data/checksum.fits
-${PYSITELIB}/pyfits/tests/data/comp.fits
-${PYSITELIB}/pyfits/tests/data/fixed-1890.fits
-${PYSITELIB}/pyfits/tests/data/memtest.fits
-${PYSITELIB}/pyfits/tests/data/o4sp040b0_raw.fits
-${PYSITELIB}/pyfits/tests/data/random_groups.fits
-${PYSITELIB}/pyfits/tests/data/scale.fits
-${PYSITELIB}/pyfits/tests/data/stddata.fits
-${PYSITELIB}/pyfits/tests/data/table.fits
-${PYSITELIB}/pyfits/tests/data/tb.fits
-${PYSITELIB}/pyfits/tests/data/tdim.fits
-${PYSITELIB}/pyfits/tests/data/test0.fits
-${PYSITELIB}/pyfits/tests/data/zerowidth.fits
-${PYSITELIB}/pyfits/tests/test_checksum.py
-${PYSITELIB}/pyfits/tests/test_checksum.pyc
-${PYSITELIB}/pyfits/tests/test_checksum.pyo
-${PYSITELIB}/pyfits/tests/test_core.py
-${PYSITELIB}/pyfits/tests/test_core.pyc
-${PYSITELIB}/pyfits/tests/test_core.pyo
-${PYSITELIB}/pyfits/tests/test_diff.py
-${PYSITELIB}/pyfits/tests/test_diff.pyc
-${PYSITELIB}/pyfits/tests/test_diff.pyo
-${PYSITELIB}/pyfits/tests/test_division.py
-${PYSITELIB}/pyfits/tests/test_division.pyc
-${PYSITELIB}/pyfits/tests/test_division.pyo
-${PYSITELIB}/pyfits/tests/test_groups.py
-${PYSITELIB}/pyfits/tests/test_groups.pyc
-${PYSITELIB}/pyfits/tests/test_groups.pyo
-${PYSITELIB}/pyfits/tests/test_hdulist.py
-${PYSITELIB}/pyfits/tests/test_hdulist.pyc
-${PYSITELIB}/pyfits/tests/test_hdulist.pyo
-${PYSITELIB}/pyfits/tests/test_header.py
-${PYSITELIB}/pyfits/tests/test_header.pyc
-${PYSITELIB}/pyfits/tests/test_header.pyo
-${PYSITELIB}/pyfits/tests/test_image.py
-${PYSITELIB}/pyfits/tests/test_image.pyc
-${PYSITELIB}/pyfits/tests/test_image.pyo
-${PYSITELIB}/pyfits/tests/test_nonstandard.py
-${PYSITELIB}/pyfits/tests/test_nonstandard.pyc
-${PYSITELIB}/pyfits/tests/test_nonstandard.pyo
-${PYSITELIB}/pyfits/tests/test_structured.py
-${PYSITELIB}/pyfits/tests/test_structured.pyc
-${PYSITELIB}/pyfits/tests/test_structured.pyo
-${PYSITELIB}/pyfits/tests/test_table.py
-${PYSITELIB}/pyfits/tests/test_table.pyc
-${PYSITELIB}/pyfits/tests/test_table.pyo
-${PYSITELIB}/pyfits/tests/test_uint.py
-${PYSITELIB}/pyfits/tests/test_uint.pyc
-${PYSITELIB}/pyfits/tests/test_uint.pyo
-${PYSITELIB}/pyfits/tests/test_util.py
-${PYSITELIB}/pyfits/tests/test_util.pyc
-${PYSITELIB}/pyfits/tests/test_util.pyo
-${PYSITELIB}/pyfits/tests/util.py
-${PYSITELIB}/pyfits/tests/util.pyc
-${PYSITELIB}/pyfits/tests/util.pyo
-${PYSITELIB}/pyfits/util.py
-${PYSITELIB}/pyfits/util.pyc
-${PYSITELIB}/pyfits/util.pyo
-${PYSITELIB}/pyfits/verify.py
-${PYSITELIB}/pyfits/verify.pyc
-${PYSITELIB}/pyfits/verify.pyo
-${PYSITELIB}/pyfits/version.py
-${PYSITELIB}/pyfits/version.pyc
-${PYSITELIB}/pyfits/version.pyo
